[package]

name = "bread"
version = "0.1.0"
authors = ["Michael Pankov <work@michaelpankov.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = "An embedded text formatting markup library for terminal output"

# These URLs point to more information about the repository
documentation = "https://github.com/mkpankov/bread/blob/master/README.md"
homepage = "https://github.com/mkpankov/bread/"
repository = "https://github.com/mkpankov/bread.git"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["text", "terminal", "markup"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "GPL-3.0"

# If a project is using a nonstandard license, then this key may be specified in
# lieu of the above key and must point to a file relative to this manifest
# (similar to the readme key)
#license-file = "..."

[dependencies.term]

version = "0.2"
